--- a/shardingjdbc-springboot-exmple1/src/main/resources/application-sharding-tbl.properties
+++ b/shardingjdbc-springboot-exmple1/src/main/resources/application-sharding-tbl.properties
@@ -1,10 +1,10 @@
 sharding.jdbc.datasource.names=ds
 
-sharding.jdbc.datasource.ds.type=org.apache.commons.dbcp.BasicDataSource
+sharding.jdbc.datasource.ds.type=org.apache.tomcat.jdbc.pool.DataSource
 sharding.jdbc.datasource.ds.driver-class-name=com.mysql.jdbc.Driver
 sharding.jdbc.datasource.ds.url=jdbc:mysql://localhost:3306/demo_ds
 sharding.jdbc.datasource.ds.username=root
-sharding.jdbc.datasource.ds.password=
+sharding.jdbc.datasource.ds.password=wang766
 
 sharding.jdbc.config.sharding.tables.t_order.actual-data-nodes=ds.t_order_${0..1}
 sharding.jdbc.config.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
